# past-a-box

./: .gitignore  Cahier des Charges.docx  Cargo.toml  LICENSE  PLibre.pptx  README.md  Repartition des taches.xlsx
api/: Cargo.toml
api/src/: client.rs  common.rs  error.rs  lib.rs  server.rs
api/src/common/: clipping.rs  config.rs
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: clipboard.rs  clippings_storage.rs  daemon.rs  error.rs  handlers.rs  main.rs  wayland.rs
gui/: Cargo.toml
gui/src/: main.rs
