[package]
name = "daemon"
version = "0.1.0"
authors = ["Galilee 'Bill' Enguehard <galilee.enguehard@gmail.com>"]
edition = "2018"

[dependencies]
api = { path = "../api" }
wayland-client = "0.23.0"
os_pipe = "0.8.1"
log = "0.4"
env_logger = "0.6"
lazy_static = "1.2"
libc = "0.2.50"
clipboard = "0.5"

[dependencies.wayland-protocols]
version = "0.23.0"
features = ["unstable_protocols", "client"]
